<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sCoolGrayC3"
        android:text="@string/settingActivity_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/sCoolGrayC3"
            android:orientation="vertical">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"
                    android:background="@drawable/shape_report_fragment"
                    android:baselineAligned="false"
                    android:gravity="center|start"
                    android:layoutDirection="rtl"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/setting_wakeLockCheckBox"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="CPU/WiFi Wake Lock"
                        android:textSize="22dp"
                        android:buttonTint="@android:color/black" />

                    <TextView
                        android:id="@+id/setting_wakeLockDescription"
                        android:layout_margin="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/setting_description"
                        android:text="@string/settingActivity_wakeLockDescription"/>


                </LinearLayout>




                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_report_fragment"
                    android:baselineAligned="false"
                    android:gravity="center|start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/setting_delayTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/settingActivity_delayTitle"/>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/shape_report_fragment"
                        android:baselineAligned="false"
                        android:gravity="center|start"
                        android:layoutDirection="ltr"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatSeekBar
                            android:id="@+id/setting_delaySeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:layoutDirection="ltr"
                            android:theme="@style/SettingSeekBarTheme" />

                        <TextView
                            android:id="@+id/setting_delaySeconds"
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="@dimen/setting_description"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/setting_delayDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="@dimen/setting_description"
                        android:text="@string/settingActivity_delayDescription"
                        android:textColor="@color/black"/>

                </LinearLayout>


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_report_fragment"
                    android:baselineAligned="false"
                    android:gravity="center|start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/setting_loggingTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/settingActivity_loggingTitle"/>

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/setting_loggingCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="Enable Logging"
                        android:textSize="25dp"
                        android:buttonTint="@android:color/black" />

                    <TextView
                        android:id="@+id/setting_loggingDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textSize="@dimen/setting_description"
                        android:text="@string/settingActivity_loggingDescription"
                        android:textColor="@color/black"/>

                    <Button
                        android:id="@+id/setting_sendErrorButton"
                        android:background="@drawable/shape_rectangle_button_gray"
                        android:layout_width="match_parent"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:textColor="@color/black"
                        android:text="@string/settingActivity_sendErrors"
                        android:layout_height="40dp" />

                </LinearLayout>


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_report_fragment"
                    android:baselineAligned="false"
                    android:gravity="center|start"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/setting_defaultButton"
                        android:background="@drawable/shape_rectangle_button"
                        android:layout_width="match_parent"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:textColor="@color/black"
                        android:text="@string/settingActivity_defaultSetting"
                        android:layout_height="40dp" />
                </LinearLayout>



        </LinearLayout>
    </ScrollView>


</LinearLayout>
